# viscomp2022

./: README.md  version_control.ipynb
Exercises/W10/exercise9_framework/exercise9_framework/: CMakeLists.txt  MainProgram.cpp  MainProgram.h  README.md  Shaders.cpp  generateBuildWindows.bat
Exercises/W10/exercise9_framework/exercise9_framework/Helpers/: GLShader.cpp  GLShader.h  opengl.h
Exercises/W10/exercise9_framework/exercise9_framework/OpenGL2.0/shaders/: ex2.glslf  ex2.glslv
Exercises/W10/exercise9_framework/exercise9_framework/shaders/: ex2.glslf  ex2.glslv
Exercises/W11/exercise10_framework/exercise10_framework/: AdvancedMaterial.cpp  AdvancedMaterial.h  AdvancedModels.cpp  AdvancedModels.h  BuiltInPath.h  CMakeLists.txt  CMakeSettings.json  MaterialWindow.cpp  Readme Linux.txt  Readme OSX.txt  generateBuildOSX.sh  generateBuildWindows.bat  skybox.cpp  skybox.h
Exercises/W11/exercise10_framework/exercise10_framework/Helpers/: ._opengl.h  DrawableModel.h  GLShader.cpp  GLShader.h  Image.cpp  Image.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  ObjectPTN.cpp  ObjectPTN.h  Quaternion.h  Textures.cpp  Textures.h  Vector.cpp  Vector.h  World.cpp  World.h  glutApplication.cpp  glutApplication.h  opengl.h
Exercises/W11/exercise10_framework/exercise10_framework/cmake/: FindGDIPLUS.cmake
Exercises/W11/exercise10_framework/exercise10_framework/models/eth_tower/: skyscraper_tri.mb
Exercises/W11/exercise10_framework/exercise10_framework/models/eth_tower/Textures/: asphalt.gtx  brushed_metal.gtx  dark_metal.gtx  facade.gtx  metal_grip.gtx
Exercises/W11/exercise10_framework/exercise10_framework/shaders/: phong.glslf  phong.glslv  skybox.glslf  skybox.glslv  texturenormal.glslf  texturenormal.glslv  texturereflection.glslf  texturereflection.glslv
Exercises/W3/: W3_exercise.ipynb
Exercises/W4/: W4_exercise.ipynb
Exercises/W5/: W5_exercise.ipynb
Exercises/W6/: W6_exercise.ipynb
Solutions/W10/: MainProgram.cpp  MainProgram.h  README.md  Shaders.cpp  generateBuildWindows.bat
Solutions/W10/Helpers/: GLShader.cpp  GLShader.h  opengl.h
Solutions/W11/: AdvancedMaterial.cpp  AdvancedMaterial.h  AdvancedModels.cpp  AdvancedModels.h  BuiltInPath.h  MaterialWindow.cpp  Readme Linux.txt  Readme Windows.txt  generateBuildWindows.bat  skybox.cpp  skybox.h
Solutions/W2/: W2_exercise_sol.ipynb
Solutions/W3/: W3_exercise_sol.ipynb
Solutions/W7/: colors_solution.cpp
Solutions/W9/: BuiltInPath.h  Readme OSX.txt  Readme.txt  UpgradeLog.htm  exercises.h  transform.cpp  transform.sln  transform.vcproj  transform.vcxproj  transform.vcxproj.filters
(+69 files in other folders)
